# django-datawatch

./: .gitignore  .sync.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  README.md  README.rst  Vagrantfile  compose.yaml  docker-compose.yaml  pyproject.toml  requirements-ci.txt  requirements-docker.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: open-release-pr.yaml  workflow.yaml  workfow.yaml
django_datawatch/: 0005_migrate_new_assigned_fields.py  admin.py  apps.py  base.py  datawatch.py  defaults.py  forms.py  models.py  monitoring.py  querysets.py  settings.py  tasks.py  urls.py  views.py
django_datawatch/backends/: base.py  celery.py  synchronous.py
django_datawatch/common/: views.py
django_datawatch/locale/de/LC_MESSAGES/: django.mo  django.po
django_datawatch/management/commands/: datawatch_clean_up.py  datawatch_delete_ghost_results.py  datawatch_list_checks.py  datawatch_refresh_results.py  datawatch_run_checks.py  monitoring_list_checks.py  monitoring_refresh_results.py  monitoring_run_checks.py
django_datawatch/migrations/: 0001_initial.py  0002_auto_20160903_2149.py  0002_auto_20180807_1508.py  0003_auto_20160904_0909.py  0003_resultstatushistory.py  0004_auto_20160904_1329.py  0004_resultassigneduser_resultassignedgroup_and_more.py  0005_auto_20160904_1438.py  0005_migrate_new_assigned_fields.py  0006_auto_20160904_1439.py  0006_remove_result_assigned_to_group_and_more.py  0007_result_data.py  0007_resulttag.py  0008_alter_result_options.py  0008_auto_20160910_1230.py
django_datawatch/templates/django_datawatch/: base.html  dashboard.html  detail.html  form.html  tags_manage.html
django_datawatch/templatetags/: class_name.py
django_datawatch/tests/: test_base_check.py  test_integration.py  test_post_delete.py  test_querysets.py  test_run_trigger_update.py  test_scheduler.py  test_trigger_update.py
django_monitoring/: admin.py  apps.py  base.py  forms.py  models.py  monitoring.py  querysets.py  tasks.py  urls.py  views.py
django_monitoring/locale/de/LC_MESSAGES/: django.po
django_monitoring/management/commands/: monitoring_run_checks.py
django_monitoring/migrations/: 0001_initial.py  0002_auto_20160903_2149.py
django_monitoring/templates/django_monitoring/: base.html  dashboard.html  detail.html  form.html
example/: admin.py  apps.py  celery.py  checks.py  models.py  settings.py  urls.py
example/fixtures/: example.json
example/locale/de/LC_MESSAGES/: django.mo  django.po
example/migrations/: 0001_initial.py
example/templates/example/checks/: user_has_enough_balance.html
vagrant/salt/: minion.conf
vagrant/salt/roots/salt/: essentials.sls  locale.sls  python.sls  rabbitmq.sls  top.sls  user.sls
vagrant/salt/roots/salt/files/: bashrc
vagrant/salt/roots/salt/postgresql/: init.sls  pg_hba.conf
