[project]
name = "django-datawatch"
version = "6.0.0"
license = "MIT"
requires-python = ">=3.9"
description = "Automated data checks for Django"
readme = "README.md"
keywords = ["django", "monitoring", "datawatch", "check", "checks"]
authors = [
    { name = "Jens Nistler", email = "jens.nistler@regiohelden.de" },
    { name = "Bogdan Radko", email = "bogdan.radko@regiohelden.de" },
]
maintainers = [
    { name = "RegioHelden GmbH", email = "opensource@regiohelden.de" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "celery>=5.0.0",
    "Django>=4.2,<6.0",
    "django-extensions>=3.0.0",
    "django-model-utils>=4.2.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/RegioHelden/django-datawatch"
Documentation = "https://github.com/RegioHelden/django-datawatch/blob/main/README.md"
Repository = "https://github.com/RegioHelden/django-datawatch.git"
Issues = "https://github.com/RegioHelden/django-datawatch/issues"
Changelog = "https://github.com/RegioHelden/django-datawatch/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_datawatch"]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.hatch.build.targets.sdist]
packages = ["django_datawatch"]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.ruff]
exclude = [".cache", ".git", "__pycache", "docs", "migrations"]
line-length = 120

[tool.ruff.lint]
dummy-variable-rgx = "_|dummy"
# See https://docs.astral.sh/ruff/rules/ for all supported rules
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "COM", # flake8-commas
    "DJ",  # flake8-django
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle
    "ERA", # eradicate
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 16
